--- a/Read_PDF_Images.ipynb
+++ b/Read_PDF_Images.ipynb
@@ -35,6 +35,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "KXGDsGmxVoBo",
         "outputId": "0249c4db-22cd-44fe-fff6-7554b3b85858"
       },
@@ -180,6 +181,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "tG1EndZCWuWd",
         "outputId": "d11522a6-36d2-469b-cf86-2f360750cadb"
       },
